--- a/src/main/webapp/hello.page/hello.styles.css
+++ b/src/main/webapp/hello.page/hello.styles.css
@@ -7,6 +7,12 @@ div#body {
 }
 .btn-authorization {
     width: 250px;
+    color: #fff;
+    background-color: #3d579b;
+}
+.btn-authorization:hover,
+.btn-authorization:focus {
+    color: #fff;
 }
 div#login {
     margin-top: 20px;
