--- a/src/main/webapp/login/login.styles.css
+++ b/src/main/webapp/login/login.styles.css
@@ -6,7 +6,6 @@
     margin: 0 auto;
 }
 #login h1 {
-    color: #1fa67b;
     font-size: 18px;
     text-align: center;
     font-weight: bold;
@@ -57,7 +56,7 @@
 }
 .btn-custom {
     color: #fff;
-    background-color: #1fa67b;
+    background-color: #3d579b;
 }
 .btn-custom:hover,
 .btn-custom:focus {
