--- a/src/main/webapp/sign.up/sign-up.styles.css
+++ b/src/main/webapp/sign.up/sign-up.styles.css
@@ -23,24 +23,14 @@
     margin-bottom: 20px;
 }
 
-#sign-up .btn.btn-custom {
+#sign-up .btn.btn-primary {
     width: 330px;
-    height: 35px;
-    font-size: 14px;
     margin-bottom: 20px;
 }
 
 #sign-up .form-control {
     width: 330px;
     color: #212121;
-}
-#sign-up .btn-custom {
-    color: #fff;
-    background-color: #3d579b;
-}
-#sign-up.btn-custom:hover,
-#sign-up .btn-custom:focus {
-    color: #fff;
 }
 
 fieldset {
