show rejected friend requests

--- a/src/main/webapp/home.page/home-page.styles.css
+++ b/src/main/webapp/home.page/home-page.styles.css
@@ -69,6 +69,6 @@ footer {
     height: 60px;
     border: 1px solid;
     margin-bottom: 1px;
-    width: 100%;
+    min-width: 100%;
     cursor: pointer;
 }
