--- a/src/main/webapp/people/friend.requests/incoming/incoming-requests.styles.css
+++ b/src/main/webapp/people/friend.requests/incoming/incoming-requests.styles.css
@@ -11,18 +11,18 @@
     width: 100%;
     margin-left: 0px;
 }
-#photo {
+.photo {
     height: 80px;
     width: 80px;
 }
-#confirm-button {
+.confirm-button {
     margin-top: 14%;
-    margin-right: 2px;
 }
 #reject-button {
     margin-top: 14%;
+    margin-left: 1px;
 }
-#list-group-item {
+.list-group-item {
     border-radius: 1px;
     height: 100px;
     font-size: 13px;
@@ -30,24 +30,24 @@
     display: flex;
     position: relative;
 }
-#list-group {
+.list-group {
     margin: 0 0 5px;
 }
-#left-container {
+.left-container {
     margin-left: 1%;
 }
-#center-container {
+.center-container {
     margin-left: 20px;
     width: 40%;
 }
-#name-container {
+.name-container {
     display: flex;
     margin-top: 5px;
     font-size: 14px;
     font-weight: bold;
     color: #428bca;
 }
-#right-container {
+.right-container {
     right: 1%;
     position: absolute;
     width: 180px;
