opening chat from "friends" page

--- a/src/main/webapp/people/friends/friends.styles.css
+++ b/src/main/webapp/people/friends/friends.styles.css
@@ -15,9 +15,8 @@
     height: 80px;
     width: 80px;
 }
-#confirm-button {
+#message-button {
     margin-top: 14%;
-    width: 80px;
 }
 #remove-button {
     margin-top: 14%;
