--- a/src/main/webapp/people/searching/searching.styles.css
+++ b/src/main/webapp/people/searching/searching.styles.css
@@ -15,9 +15,6 @@
     height: 80px;
     width: 80px;
 }
-#add-friend-button {
-    margin-top: 14%;
-}
 #list-group-item {
     border-radius: 1px;
     height: 100px;
@@ -25,6 +22,7 @@
     position: relative;
     display: flex;
     position: relative;
+    cursor: pointer;
 }
 #list-group {
     margin: 0 0 5px;
@@ -42,9 +40,4 @@
     font-size: 14px;
     font-weight: bold;
     color: #428bca;
-}
-#right-container {
-    right: 1%;
-    position: absolute;
-    width: 160px;
 }
