--- a/src/main/webapp/profile/profile.styles.css
+++ b/src/main/webapp/profile/profile.styles.css
@@ -6,13 +6,14 @@
 }
 #profile-wrapper {
     position: absolute;
-    top: 0px;
+    top: 10px;
     bottom: 0px;
-    width: 100%;
-    margin-left: 0px;
-}
-#username-container {
+    display: table;
     margin-left: 20px;
+}
+#user-information-container {
+    display: table-cell;
+    min-width: 600px;
 }
 #photo-container {
     margin-top: 10px;
@@ -35,4 +36,17 @@
 }
 #user-information {
     margin-top: 20px;
+}
+#buttons-container {
+    display: table-cell;
+    width: 300px
+}
+#internal-information-container {
+    margin-left: 20px;
+    position: absolute;
+    top: 10px
+}
+#username-container {
+    font-size: 14px;
+    font-weight: bold;
 }
